<resources>
    <string name="app_name">Главное меню</string>
    <string name="header">Авторизация</string>
    <string name="hint1">Name</string>
    <string name="hint2">Password</string>
    <string name="namebutton">Авторизоваться</string>
    <string name="news">Новости</string>
    <string name="schedule">Расписание</string>
    <string name="About_the_department">О кафедре</string>
    <string name="Send_news_to_social_networks">Отправить новость в соцсети</string>
    <string name="authorization">Главное меню</string>
    <string name="Enrollee">Абитуриент</string>
    <string name="MOP_History">Кафедра МОП ЭВМ</string>
    <integer name="com_vk_sdk_AppId">5545742</integer>

</resources>
