<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#13f1cc">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView7"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/header"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:textSize="40sp"
                android:textStyle="bold|normal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NAME2"
                android:inputType="textCapWords"
                android:hint="@string/hint1"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginTop="50dp"
                android:layout_alignRight="@+id/textView4"
                android:layout_alignEnd="@+id/textView4" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/PASSWORD2"
                android:inputType="textPassword"
                android:hint="@string/hint2"
                android:layout_below="@+id/NAME2"
                android:layout_alignLeft="@+id/NAME2"
                android:layout_alignStart="@+id/NAME2"
                android:layout_marginTop="44dp"
                android:layout_alignRight="@+id/NAME2"
                android:layout_alignEnd="@+id/NAME2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/namebutton"
                android:id="@+id/button4"
                android:layout_below="@+id/PASSWORD2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="81dp"
                android:onClick="goToActivity_Menu" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>